--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "lint": "eslint . --fix"
   },
   "dependencies": {
+    "@vueuse/core": "^11.2.0",
+    "axios": "^1.7.7",
+    "element-plus": "^2.8.7",
     "pinia": "^2.2.6",
     "vue": "^3.5.12",
     "vue-router": "^4.4.5"
@@ -19,6 +22,9 @@
     "@vitejs/plugin-vue": "^5.1.4",
     "eslint": "^9.14.0",
     "eslint-plugin-vue": "^9.30.0",
+    "sass": "^1.80.6",
+    "unplugin-auto-import": "^0.18.3",
+    "unplugin-vue-components": "^0.27.4",
     "vite": "^5.4.10",
     "vite-plugin-vue-devtools": "^7.5.4"
   }
